Fix: The .ck-reset class should set word-wrap to break-word to make sure long words do not overflow. Closes #105.

--- a/packages/ckeditor5-theme-lark/theme/components/reset.scss
+++ b/packages/ckeditor5-theme-lark/theme/components/reset.scss
@@ -13,6 +13,9 @@
 	text-decoration: none;
 	vertical-align: middle;
 	transition: none;
+
+	// https://github.com/ckeditor/ckeditor5-theme-lark/issues/105
+	word-wrap: break-word;
 }
 
 /**
